[package]
name = "nimix"
version = "0.2.0"
authors = ["Niland Schumacher <naschuma@ucsc.edu>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nilandasd/nimix"
rust-version = "1.79.0"
description = "An allocator designed to be use by a GC"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.5.1"

[profile.release-with-debug]
inherits = "release"
debug = true

[[bench]]
name = "basic"
harness = false

[profile.bench]
debug = true
